# LocalColorCorrection

./: CMakeLists.txt  basic.cpp  basic.h  common.h  correct.cpp  correspond.cpp  correspond.h  function.cpp  function.h  main.cpp  removal.cpp  save_correspond.cpp  weightcorrect.cpp
data/: features_view1.txt  features_view5E2.txt  labels_disp5.txt  matches_view5E2.txt
